--- a/PicToSketch/Base.lproj/Main.storyboard
+++ b/PicToSketch/Base.lproj/Main.storyboard
@@ -8,9 +8,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="DancingScript-Regular.ttf">
-            <string>DancingScript-Regular</string>
-        </array>
         <array key="DancingScript-SemiBold.ttf">
             <string>DancingScript-SemiBold</string>
         </array>
@@ -138,8 +135,8 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="684"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sketch Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hxa-Nj-Fwb">
-                                                <rect key="frame" x="110.66666666666669" y="55" width="172" height="42"/>
-                                                <fontDescription key="fontDescription" name="DancingScript-Regular" family="Dancing Script" pointSize="35"/>
+                                                <rect key="frame" x="108.66666666666669" y="55" width="176" height="42"/>
+                                                <fontDescription key="fontDescription" name="DancingScript-SemiBold" family="Dancing Script" pointSize="35"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
